tests/positive/ImportNestedLocalModule/ImportNestedLocalModule.juvix
module ImportNestedLocalModule;

import Stdlib.Prelude open;
import ImportedModule open;

main : Nat := ImportedModule.A.B.x;
