tests/negative/Internal/IdenFunctionArgsNoExplicit.juvix
module IdenFunctionArgsNoExplicit;

import Stdlib.Prelude open;

f : {A : Type} → Nat;
f := zero;

main : Nat;
main := f;

